--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,11 @@
     transform: rotate(360deg);
   }
 }
+
+/* 실습3 External style sheet*/
+.titleBar {
+  background-color: black;
+  display: block;
+  color: aqua;
+  padding-left: 10px;
+}
